Map view out of screen bugfix

--- a/wp-content/themes/redsuburbs-blog/src/styles/_legacy-combined.css
+++ b/wp-content/themes/redsuburbs-blog/src/styles/_legacy-combined.css
@@ -28,6 +28,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .App {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   /*
   position: fixed;
   top: 0; left: 0;
@@ -601,12 +604,13 @@ a {
 
 .HomePage {
   display: flex;
+  height: 100%;
 }
 
 .HomePage__map {
   border: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 .HomePage__welcome-msg {
